<resources>
    <string name="app_name">HollisCheng</string>
    <string name="appName">HollisCheng</string>
    <string name="action_settings">Settings</string>
    <string name="AdminPage">Admin Page</string>
    <string name="SettingPage">Setting Page</string>
    <string name="Language">Language</string>
    <string name="facebook_app_id" translatable="false">100537423729266</string>
    <string name="Neighborhood">Neighborhood</string>
    <string name="MarketPlace">Market Place</string>
    <string name="CardWallet">Card Wallet</string>
    <string name="Event">Event</string>
    <string name="Notice">Notice</string>
    <string name="PersonalNotice">Personal Notice</string>
    <string name="Setting">Setting</string>
    <string name="Admin">Admin</string>
    <string name="PMessage">P Message</string>
    <string name="postQ">Are you sure to post?</string>
    <string name="saveQ">Are you sure to save?</string>
    <string name="submitQ">Are you sure to submit?</string>
    <string name="leaveQ">Are you sure to leave?</string>
    <string name="logoutQ">Are you sure to logout?</string>
    <string name="sendQ">Are you sure to send?</string>
    <string name="post">Post</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="load">Loading</string>
    <string name="edit">Edit</string>
    <string name="Yesterday">Yesterday</string>
    <string name="Today">Today</string>
    <string name="Submit">Submit</string>
    <string name="Send">Send</string>
    <string name="Image">Image</string>
    <string name="Uploading">Uploading&#8230;</string>
    <string name="Loading">Loading&#8230;</string>
    <string name="Sending">Sending&#8230;</string>
    <string name="Message">Type your Message&#8230;</string>
    <string name="Modify">Modify</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Action</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="listfooterview_normal">Load More</string>
    <string name="listfooterview_ready">Release to load more</string>
    <string name="Forget_password">Forget password?</string>
    <string name="New_Member">New Member</string>
    <string name="New_World_Club" translatable="false">New World CLUB</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="ReTypePassword">Re Type Password</string>
    <string name="Optional">Optional</string>
    <string name="Display_Name">Display Name</string>
    <string name="Mobile">Mobile</string>
    <string name="Birthday_M_D">Birthday(M/D)</string>
    <string name="Age_Range">Age Range</string>
    <string name="Email">Email</string>
    <string name="Gender">Gender</string>
    <string name="Hyphen"> - </string>
    <string name="TopicDate">Date :</string>
    <string name="TopicTime">Time :</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Date_FromTo">Date</string>
    <string name="Time_FromTo">Time</string>
    <string name="Topic">Topic</string>
    <string name="Content">Content</string>
    <string name="Category">Category</string>
    <string name="Estate">Estate</string>
    <string name="Type">Type</string>
    <string name="Name">Name</string>
    <string name="Sequence">Sequence</string>
    <string name="image">Thumbnail</string>
    <string name="bookingitem_venue">Venue: </string>
    <string name="bookingitem_fee">Fee:  $</string>
    <string name="bookingitem_date">Date   :  </string>
    <string name="bookingitem_time">Time   :  </string>
    <string name="bookingitem_desc">Description: </string>
    <string name="bookingadmin_title">Title*</string>
    <string name="bookingadmin_to">To</string>
    <string name="bookingadmin_venue">Venue*</string>
    <string name="bookingadmin_date">Date*</string>
    <string name="bookingadmin_time">Time*</string>
    <string name="bookingadmin_Quota">Quota</string>
    <string name="bookingadmin_QuotaPer1">Quota Per 1</string>
    <string name="bookingadmin_Amount">Amount($) </string>
    <string name="bookingadmin_Desc">Description*</string>
    <string name="bookingadmin_Remark">Remark</string>
    <string name="bookingdetail_apply">Member join </string>
    <string name="bookingdetail_totalamount">Total Amout($)</string>
    <string name="eventdetail_apply">Submit</string>
    <string name="eventdetail_title">Title</string>
    <string name="eventdetail_venue">Venue</string>
    <string name="eventdetail_date">Date</string>
    <string name="eventdetail_time">Time</string>
    <string name="eventdetail_Desc">Description*</string>
    <string name="bookeddetail_cancel">Cancel</string>
    <string name="bookeddetail_memberjoin">Number Join</string>
    <string name="AdminPersonalNotice">Admin Personal Notice</string>
    <string name="PersonalNoticeModify">Personal Notice Modify</string>
    <string name="deleteQ">Are you sure to delete?</string>
    <string name="NoticeModify">Notice Modify</string>
    <string name="PrivateMessage">Private Message</string>
    <string name="NoticeMsg">Notice Message</string>
    <string name="Promotions">Promotions</string>
    <string name="CreateNotice">Create Notice</string>
    <string name="CreatePM">Create Private Message</string>
    <string name="CreateFB">Create Feedback</string>
    <string name="Feedback">Feedback</string>
    <string name="Website">Website(Full Link:http://www.abc.com)</string>
    <string name="TopicWebsite">Website :</string>
    <string name="PM">Private Message</string>
    <string name="title_activity_almain_page">ALMainPage</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="start">START</string>
    <string name="emailAddress">Email Address (For Login)</string>
    <string name="enterEPWStat">Please enter the password shown on email:</string>
    <string name="newPWStat">New password:</string>
    <string name="newPW">NEW PASSWORD</string>
    <string name="reNewPW">RE-ENTER PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="selectId">SELECT YOUR IDENTITY</string>
    <string name="selId">Select identity</string>
    <string name="enterRA">Please enter your residential address</string>
    <string name="addPro">Can add more than 1 NewWorld Development property</string>
    <string name="block">BLOCK</string>
    <string name="floor">FLOOR</string>
    <string name="unit">UNIT</string>
    <string name="resident">RESIDENT</string>
    <string name="owner">OWNER</string>
    <string name="acctInfo">ACCOUNT INFO</string>
    <string name="NAME">NAME</string>
    <string name="CreatePW">CREATE PASSWORD</string>
    <string name="ReEnterPW">RE-ENTER PASSWORD</string>
    <string name="MobOPT">MOBILE (OPTIONAL)</string>
    <string name="YesPICS">Yes, I have read and confirmed to accept the PICS of Artisanal Living. (OPTIONAL)</string>
    <string name="THX">THANK YOU</string>
    <string name="PNo">PIN NUMBER</string>
    <string name="PStat">Please enter the PIN no. you received from Email / SMS and set up your account password</string>
    <string name="MNo">MEMBERSHIP NUMBER</string>
    <string name="EnterAcctStat">Please enter your account information</string>
    <string name="PW">PASSWORD</string>
    <string name="LOGIN">LOGIN</string>
    <string name="FORGOTPW">FORGOT YOUR PASSWORD?</string>
    <string name="OR">OR</string>
    <string name="PERSET">PERSONALIZATION SETTING</string>
    <string name="OTHERS">OTHERS (PLEASE SPECIFY)</string>
    <string name="CYFB">CHOOSE YOUR FAVORITE BRANDS</string>
    <string name="UYPP">Upload Your Profile Picture</string>
    <string name="CW">CONNECT WITH</string>
    <string name="DISNAME">DISPLAY NAME</string>
    <string name="YS">YOUR SAY</string>
    <string name="APP_NAME">ARTISANAL LIVING</string>
    <string name="SYAJN">START YOUR ARTISANAL JOURNEY NOW!</string>
    <string name="JU">JOIN US</string>
    <string name="RESETPW">RESET PASSWORD</string>
    <string name="EMStat">Enter your e-mail address and we\'ll send you a pin to reset your password.</string>
    <string name="EDITPRO">EDIT PROFILE</string>
    <string name="SETTING">SETTING</string>
    <string name="PushNotice">Push Notification</string>
    <string name="PROFILE">PROFILE</string>
    <string name="Yoursay">Your say</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="UpgradeStat">Upgrade to NWD resident/ owner</string>
    <string name="Residential_Address">Residential Address</string>
    <string name="NEXT">NEXT</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="LSM">Linked Facebook</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="ABOUT">About</string>
    <string name="RewardInSlideReferral">My Rewards</string>
    <string name="TC">T&amp;C</string>
    <string name="PI">PROPERTY INFO</string>
    <string name="share">Share</string>
    <string name="MY_EVENTS">MY EVENTS</string>
    <string name="R_EVENT">REGISTERED EVENTS</string>
    <string name="ERO">NWD RESIDENT / OWNER</string>
    <string name="RA">Residential Address</string>
    <string name="BUILDING">BUILDING</string>
    <string name="STREETNAME">STREET NAME</string>
    <string name="AYAENWCM">Are you currently a New World CLUB member?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="MOBILE">MOBILE</string>
    <string name="ReEnterPassword">RE-ENTER PASSWORD</string>
    <string name="BirthSurprise">In your birthday month, you will receive a little surprise from us.</string>
    <string name="CheckUnderstand">I understand I will be register as New World Club Member.</string>
    <string name="MEMBERSHIP_ID">Membership No. / Name</string>
    <string name="NWCM">NEW WORLD CLUB MEMBER</string>
    <string name="URPW">YOUR PASSWORD</string>
    <string name="REENTERPW">RE-ENTER PASSWORD</string>
    <string name="NEWREG">NEW REGISTER</string>
    <string name="FEEDB">Feedback</string>
    <string name="CONTACTUS">Contact Us</string>
    <string name="PRIVILEGES">PRIVILEGES</string>
    <string name="EVENTS">EVENTS</string>
    <string name="FACILITIES">FACILITIES</string>
    <string name="FACILITYLIST">FACILITY LIST</string>
    <string name="PropertyLabel">Property:</string>
    <string name="VenueLabel">Venue:</string>
    <string name="DateLabel">Date:</string>
    <string name="TimeLabel">Time:</string>
    <string name="PROPERTYNOTICE">PROPERTY NOTICE</string>
    <string name="Recommendation">Recommends</string>
    <string name="Bookmarked">Bookmarked</string>
    <string name="My_Events">My Events</string>
    <string name="Current_password">Current password</string>
    <string name="LATEST">LATEST</string>
    <string name="BOOKMARKED">BOOKMARKED</string>
    <string name="NO_OFFERS_AVAILABLE">NO OFFERS AVAILABLE</string>
    <string name="Bookmark">Bookmark</string>
    <string name="Call">Call</string>
    <string name="ALL">ALL</string>
    <string name="PAST">PAST</string>
    <string name="facilities_Book_Done">Done</string>
    <string name="TabMe">ME</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="ChooseGallery">Photo Library</string>
    <string name="PropertyName">Property Name</string>
    <string name="UPDATES">UPDATES</string>
</resources>