<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/SelectedColor"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:paddingLeft="20dip"
            android:singleLine="true"
            android:text="@string/Image"
            android:textColor="@color/White"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTakePhoto"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/TakePhoto"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtChooseGallery"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/ChooseGallery"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>