<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <template.cheng.hollis.template.viewPager.NoSwipeViewPager
            android:id="@+id/TabViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:divider="@color/SelectedColor"
            android:textColor="@color/White" />
        <!--android:flipInterval="30"-->
        <!--android:persistentDrawingCache="animation"-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/llTabBarMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/img_menu_bar_1"
            android:orientation="horizontal"
            android:weightSum="4">
            <!--noEventTotal=4-->
            <!--android:background="@drawable/img_menu_bar"-->
            <LinearLayout
                android:id="@+id/LLTabMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/img_menu_bar_active"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabMe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_share" />

                <template.cheng.hollis.template.textView.SweetSansRegTextView
                    android:id="@+id/ssrvTagMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:text="@string/TabMe"
                    android:textColor="@color/TabBarSelectColor"
                    android:textSize="10sp" />


            </LinearLayout>

            <!--android:background="@color/ALMainTab"-->

            <LinearLayout
                android:id="@+id/LLTabFacilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabFacilities"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_slideshow" />

                <template.cheng.hollis.template.textView.SweetSansRegTextView
                    android:id="@+id/ssrvTagFacilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:text="@string/FACILITIES"
                    android:textColor="@color/White"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLTabPrivileges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabPrivileges"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_gallery" />

                <template.cheng.hollis.template.textView.SweetSansRegTextView
                    android:id="@+id/ssrvTagPrivileges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:text="@string/PRIVILEGES"
                    android:textColor="@color/White"
                    android:textSize="10sp" />


            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:id="@+id/LLTabEvents"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical">-->

            <!--<ImageView-->
            <!--android:id="@+id/tabEvents"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/icon_lock_event" />-->

            <!--<com.nwd.artisanalliving.SupportClass.SweetSansRegTextView-->
            <!--android:id="@+id/ssrvTagEvents"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="2dp"-->
            <!--android:text="@string/EVENTS"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="10sp" />-->


            <!--</LinearLayout>-->

            <LinearLayout
                android:id="@+id/LLTabProperties"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabProperties"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_manage" />

                <template.cheng.hollis.template.textView.SweetSansRegTextView
                    android:id="@+id/ssrvTagProperties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:text="@string/UPDATES"
                    android:textColor="@color/White"
                    android:textSize="10sp" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
